<resources>
    <string name="app_name">SANTMAT</string>
    <string name="playlist_name">Playlist_Name</string>
    <string name="Playlist_Desc">Playlist Description</string>
    <string name="Video_Name">Pravachan Name</string>
    <string name="videos">Videos</string>
    <string name="home">Home</string>
    <string name="Events">Upcoming Events</string>
    <string name="Logout">Logout</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="About_me">About Me</string>
    <string name="stuti">Stuti</string>
    <string name="Email">Email: </string>
    <string name="Email_id"> santmatchannel@gmail.com</string>
    <string name="banner_ad_unit_id">ca-app-pub-2406081447963977/8904413265</string>

    <!--Testing Ad ID-->
    <string name="banner_ad_unit_idre">ca-app-pub-3940256099942544/6300978111</string>
    <string name="designed">Designed and Developed By Khagendra Kumar</string>
    <string name="ver">Version 2.0.5</string>
    <string name="copyright">All Rights Reserved</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
